Basic RAG for GPT worked.

--- a/notebook/marqo.ipynb
+++ b/notebook/marqo.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "try:\n",
     "    mq.create_index(INDEX_NAME)\n",
-    "except Exception:\n",
+    "except marqo.errors.MarqoWebError:\n",
     "    pass\n"
    ]
   },
@@ -95,7 +95,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "{'errors': False,\n 'processingTimeMs': 23932.621760000075,\n 'index_name': 'wiki',\n 'items': [{'_id': '7751000',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751001',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751042',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751048',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751062',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751063',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751065',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751092',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751123',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751136',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751172',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751190',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751199',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751206',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751210',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751227',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751233',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751238',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751246',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751258',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200}]}"
+      "text/plain": "{'errors': False,\n 'processingTimeMs': 25282.554010998865,\n 'index_name': 'wiki',\n 'items': [{'_id': '7751000',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751001',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751042',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751048',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751062',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751063',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751065',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751092',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751123',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751136',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751172',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751190',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751199',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751206',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751210',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751227',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751233',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751238',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751246',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200},\n  {'_id': '7751258',\n   'result': 'updated',\n   'forced_refresh': True,\n   'status': 200}]}"
      },
      "execution_count": 7,
      "metadata": {},
@@ -118,12 +118,10 @@
    "execution_count": 8,
    "outputs": [],
    "source": [
-    "DISPLAY_LENGTH = 200\n",
     "\n",
-    "def showTopResults(result: dict, n: int = 3):\n",
-    "    hits = result[\"hits\"]\n",
-    "    for i in range(n):\n",
-    "        print(f\"id={hits[i]['_id']} score={hits[i]['_score']}\\n{hits[i]['text'][:DISPLAY_LENGTH]}...\\n\")"
+    "def showResults(results: dict):\n",
+    "    for r in results[\"hits\"]:\n",
+    "        print(f\"id={r['_id']} score={r['_score']} title={r['title']}\\n{r['_highlights']}\\n\")"
    ],
    "metadata": {
     "collapsed": false
@@ -137,23 +135,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "id=7751000 score=0.81023204\n",
-      "M-137 was a state trunkline highway in the US state of Michigan that served as a spur route to the Interlochen Center for the Arts and Interlochen State Park. It started south of the park and ran nort...\n",
+      "id=7751000 score=0.81023204 title=M-137 (Michigan highway)\n",
+      "{'text': 'There M-137 ran almost due north before terminating at its connection with the rest of the state trunkline system at US 31 at Interlochen Corners. The roadway continues north of US 31 as South Long Lake Road after the M-137 designation ended.'}\n",
       "\n",
-      "id=7751246 score=0.6179326\n",
-      "Chesterfield Islands from space Chesterfield Islands (îles Chesterfield in French) are a French archipelago of New Caledonia located in the Coral Sea, 550 km northwest of Grande Terre, the main island...\n",
+      "id=7751062 score=0.6161333 title=Ghelamco Arena\n",
+      "{'text': 'Gent'}\n",
       "\n",
-      "id=7751062 score=0.6161333\n",
-      "Ghelamco Arena panorama indoor. The Ghelamco Arena (also called Arteveldestadion) is a multi-use stadium in Ghent, Belgium. It hosts the home matches of football club K.A.A. Gent and was officially op...\n",
+      "id=7751190 score=0.58454525 title=Diego, Prince of Asturias\n",
+      "{'text': '==Ancestry== Category:1575 births Category:1582 deaths Category:16th-century House of Habsburg Category:Princes of Asturias Category:Dukes of Montblanc Category:Princes of Portugal Category:Spanish infantes Category:Portuguese infantes Category:Heirs apparent who never acceded'}\n",
       "\n"
      ]
     }
    ],
    "source": [
     "results = mq.index(INDEX_NAME).search(\n",
-    "    q=\"What is M-137?\", searchable_attributes=[\"title\", \"text\"]\n",
+    "    q=\"What is M-137?\", limit=3, attributes_to_retrieve=[\"title\"]\n",
     ")\n",
-    "showTopResults(results)"
+    "showResults(results)"
    ],
    "metadata": {
     "collapsed": false
@@ -167,23 +165,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "id=7751000 score=0.8329001\n",
-      "M-137 was a state trunkline highway in the US state of Michigan that served as a spur route to the Interlochen Center for the Arts and Interlochen State Park. It started south of the park and ran nort...\n",
+      "id=7751000 score=0.8329001 title=M-137 (Michigan highway)\n",
+      "{'text': 'M-137 was a state trunkline highway in the US state of Michigan that served as a spur route to the Interlochen Center for the Arts and Interlochen State Park. It started south of the park and ran north between two lakes in the area and through the community of Interlochen to US Highway 31 (US 31) in Grand Traverse County.'}\n",
       "\n",
-      "id=7751062 score=0.6469256\n",
-      "Ghelamco Arena panorama indoor. The Ghelamco Arena (also called Arteveldestadion) is a multi-use stadium in Ghent, Belgium. It hosts the home matches of football club K.A.A. Gent and was officially op...\n",
+      "id=7751062 score=0.6469256 title=Ghelamco Arena\n",
+      "{'title': 'Ghelamco Arena'}\n",
       "\n",
-      "id=7751136 score=0.63978904\n",
-      "Somersville Towne Center is a regional shopping mall located in Antioch, California. Previously named County East Mall until 2004, the mall is managed by Urban Retail Properties. Originally opened in ...\n",
+      "id=7751136 score=0.63978904 title=Somersville Towne Center\n",
+      "{'title': 'Somersville Towne Center'}\n",
       "\n"
      ]
     }
    ],
    "source": [
     "results = mq.index(INDEX_NAME).search(\n",
-    "    q=\"What highway is near Interlochen State Park in Michigan?\", searchable_attributes=[\"title\", \"text\"]\n",
+    "    q=\"What highway is near Interlochen State Park in Michigan?\",\n",
+    "    limit=3, attributes_to_retrieve=[\"title\"]\n",
     ")\n",
-    "showTopResults(results)"
+    "showResults(results)"
    ],
    "metadata": {
     "collapsed": false
