Commented notebook demo_basic.ipynb.

--- a/notebook/demo_basic.ipynb
+++ b/notebook/demo_basic.ipynb
@@ -5,7 +5,17 @@
    "source": [
     "# Demo (Basic Function)\n",
     "\n",
-    "Demonstrate the basic operation of Knowledge Q&A\n",
+    "Demonstrate the basic operation of Knowledge Q&A.\n",
+    "\n",
+    "There are two sections in this demo:\n",
+    "\n",
+    "**Index the Dataset** demonstrates how to index the known knowledge.  In this demo, I downloaded a tiny set of 20 Wikipedia articles in [this Kaggle directory](https://www.kaggle.com/datasets/ltcmdrdata/plain-text-wikipedia-202011?resource=download) just to demonstrate the functionality.  I used Marqo for this purpose.\n",
+    "\n",
+    "**RAG Q&A** demonstrates how to ask LLM a question with the given knowledge.  You can see the bot picked up a correct article and gave the respective citation.  If the question is outside the scope of the given knowledge, the bot would reply that it didn't know and with a citation marker \"\\[--\\]\".  This is useful later for us to trigger the bot to ask follow up questions.\n",
+    "\n",
+    "Also demonstrated is the ability to remove the restriction of the knowledge scope, by either asking the bot not to restrict itself, or remove the index reference all together.  The bot will respond with its pretrained knowledge.\n",
+    "\n",
+    "**Note**: Performance evaluation will be added later.\n",
     "\n",
     "## Prerequisites\n",
     "\n",
@@ -47,7 +57,7 @@
    "source": [
     "## Set up the Environment\n",
     "\n",
-    "Adjust these variables if necessary"
+    "Adjust these variables if necessary to suit the local environment."
    ],
    "metadata": {
     "collapsed": false
@@ -98,8 +108,10 @@
    ],
    "source": [
     "try:\n",
+    "    # Create the index if not yet created\n",
     "    index = MarqoIndexer.new(MARQO_SERVER, TEST_INDEX_NAME)\n",
     "except Indexer.IndexExistError as e:\n",
+    "    # The index exists, so we just open it.\n",
     "    print(f\"Index exists: {e}\")\n",
     "    index = MarqoIndexer(MARQO_SERVER, TEST_INDEX_NAME)"
    ],
@@ -115,7 +127,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-07 16:03:36,385 logger:'marqo' INFO     add_documents batch 0: took 29.998s for Marqo to process & index 20 docs. Roundtrip time: 30.025s.\n"
+      "2024-01-07 17:00:02,764 logger:'marqo' INFO     add_documents batch 0: took 22.685s for Marqo to process & index 20 docs. Roundtrip time: 22.726s.\n"
      ]
     },
     {
@@ -127,10 +139,11 @@
     }
    ],
    "source": [
-    "# Insert test data\n",
+    "# Read the test data\n",
     "with open(DATA_FILE, \"r\") as fd:\n",
     "    data = json.load(fd)\n",
     "\n",
+    "# Put the data into the index.  Overwrite those with the same IDs.\n",
     "status = await index.add(data, keyFields=[\"title\", \"text\"], idField=\"id\")\n",
     "print(f\"{len(status['items'])} items updated\")"
    ],
@@ -147,6 +160,15 @@
     "    # Print the embedding search for nice reading\n",
     "    for r in results:\n",
     "        print(f\"id={r['_id']} score={r['_score']} title={r['title']}\\n{r['_highlights']}\\n\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**Demonstrated that we can search based on embedding**"
    ],
    "metadata": {
     "collapsed": false
@@ -179,6 +201,7 @@
     }
    ],
    "source": [
+    "# Test semantic searching\n",
     "nearestEmbedding = await index.search(\"What is M-137?\", top=RAG_KNOWLEDGE)\n",
     "showResults(nearestEmbedding)"
    ],
@@ -225,7 +248,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "First, we ask for something that was mentioned in the facts."
+    "**First, we ask for something that was mentioned in the facts.**\n",
+    "\n",
+    "Note that the sample was about M-137 highway, but I asked the bot for point of interests.  Also note that the bot not only provided its answer, but also attached with the citation to the article."
    ],
    "metadata": {
     "collapsed": false
@@ -236,7 +261,8 @@
    "execution_count": 9,
    "outputs": [],
    "source": [
-    "bot = GptBot.of(\"gpt4\").withFacts(index, contentFields=[\"title\", \"text\"], top=5)\n"
+    "# Create a bot (using GPT-4) and give it the indexed knowledge above.  We make the bot pick the top 5 candidate articles from which to derive its answer.\n",
+    "bot = GptBot.of(\"gpt4\").withFacts(index, contentFields=[\"title\", \"text\"], top=5)"
    ],
    "metadata": {
     "collapsed": false
@@ -257,11 +283,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yes, one point of interest in Michigan is the M-137, a state trunkline highway that served as a spur route to the Interlochen Center for the Arts and Interlochen State Park. [7751000]\n"
+      "Yes, one point of interest in Michigan is the M-137, a state trunkline highway that served as a spur route to the Interlochen Center for the Arts and Interlochen State Park. However, as of June 2020, the highway designation was decommissioned and the jurisdiction of the roadway was transferred from the Michigan Department of Transportation to the Grand Traverse County Road Commission. [7751000]\n"
      ]
     }
    ],
    "source": [
+    "# Ask the question that I know in the knowledge.\n",
     "question = \"Do you know any point of interests in Michigan?\"\n",
     "answer = await bot.ask(question)\n",
     "print(f\"{answer.content} [{answer.citation}]\")"
@@ -273,7 +300,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Then, we try to ask a question that is not mentioned in the facts."
+    "**Then, we try to ask a question that is not mentioned in the facts.**\n",
+    "\n",
+    "The default behavior is not to answer outside the scope of our indexed knowledge.  So, the bot said \"I don't know\".  In addition, the citation is now \"--\".  This is useful for triggering the system for further actions, such as making the bot to ask a follow up question."
    ],
    "metadata": {
     "collapsed": false
@@ -303,7 +332,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "We can ask it not to restricted to the given facts, but use them to update its pre-trained knowledge."
+    "**We can ask it not to restricted to the given facts, but use them to update its pre-trained knowledge.**  `(restricted=False)`\n",
+    "\n",
+    "Note that the bot now answered the question about Euler's Identity (the citation is None).  But it still answered using the given indexed knowledge if it was available."
    ],
    "metadata": {
     "collapsed": false
@@ -317,7 +348,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Euler's Identity is a mathematical equation that beautifully connects several fundamental mathematical constants. The equation is e^(iπ) + 1 = 0. In this equation, e is the mathematical constant approximately equal to 2.71828, i is the imaginary unit, which satisfies the equation i^2 = -1, and π is the ratio of the circumference of a circle to its diameter, approximately equal to 3.14159. This identity is named after the Swiss mathematician Leonhard Euler. [None]\n"
+      "Euler's identity is a mathematical equation that establishes a deep relationship between several fundamental mathematical constants. It is often considered a remarkable and beautiful equation because it combines five of the most important numbers in mathematics into a single simple equation: the numbers 0, 1, pi, e and the imaginary unit i. The identity is written as e^(i*pi) + 1 = 0. This equation is a special case of Euler's formula, which states that for any real number x, e^(ix) = cos(x) + i*sin(x). [None]\n"
      ]
     }
    ],
@@ -338,7 +369,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yes, one of the points of interest in Michigan was the M-137 state trunkline highway that served as a spur route to the Interlochen Center for the Arts and Interlochen State Park. It started south of the park and ran north between two lakes in the area and through the community of Interlochen to US Highway 31 (US 31) in Grand Traverse County. However, this highway was decommissioned and its signage was removed by August 2020. [7751000]\n"
+      "One notable point of interest in Michigan is the Interlochen Center for the Arts and Interlochen State Park, which were served by the M-137 state trunkline highway. This highway ran north through the community of Interlochen until it was decommissioned in 2020 . [7751000]\n"
      ]
     }
    ],
@@ -354,7 +385,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "We can remove the facts and it will answer based on its pretrained knowledge"
+    "**We can remove the facts and it will answer based on its pretrained knowledge.**\n",
+    "\n",
+    "Here we removed the index.  So the bot is now answering with its pretrained knowledge."
    ],
    "metadata": {
     "collapsed": false
@@ -368,29 +401,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yes, there are numerous points of interest in Michigan. Here are a few:\n",
+      "Yes, there are many points of interest in Michigan. Here are a few:\n",
       "\n",
-      "1. Pictured Rocks National Lakeshore: This is a U.S. National Lakeshore on the shore of Lake Superior. It offers spectacular scenery, hiking trails, and kayaking.\n",
+      "1. The Henry Ford Museum: This museum in Dearborn is dedicated to American innovation, particularly in the field of technology.\n",
       "\n",
-      "2. Mackinac Island: It's a place known for its iconic 18th-century fort, stunning water views, historic sites and fudge. Automobiles are not allowed on the island, so horse-drawn carriages, bicycles, and walking are the main modes of transportation.\n",
+      "2. Detroit Institute of Arts: Home to one of the best art collections in the United States, the DIA offers a diverse range of exhibitions and educational programs.\n",
       "\n",
-      "3. The Henry Ford Museum: This is a large indoor and outdoor history museum complex. It also includes the Henry Ford Museum of American Innovation and Greenfield Village.\n",
+      "3. Mackinac Island: Known for its historic sites, horse-drawn carriages, and fudge shops. The island is also home to Fort Mackinac, which was built by the British during the American Revolutionary War.\n",
       "\n",
-      "4. Detroit Institute of Arts: This is one of the premier art museums in the United States and home to more than 65,000 works of art.\n",
+      "4. Pictured Rocks National Lakeshore: Located on the Lake Superior shoreline, this area offers stunning natural beauty, including sand dunes, waterfalls, and colorful mineral-stained cliffs.\n",
       "\n",
-      "5. Sleeping Bear Dunes National Lakeshore: It is famous for its sand dunes that are as high as 460 feet above Lake Michigan.\n",
+      "5. Sleeping Bear Dunes National Lakeshore: This park features towering sand dunes, beautiful beaches, and clear blue water. The Sleeping Bear Dunes also offer excellent hiking and camping opportunities.\n",
       "\n",
-      "6. Detroit's Motown Museum: The museum is located in the house where Berry Gordy Jr. founded Motown Records and it offers a history of the label and its artists.\n",
+      "6. Detroit's Motown Museum: This museum is located in the house where Berry Gordy Jr. founded Motown Records. It's a must-visit for music lovers.\n",
       "\n",
-      "7. The Detroit Zoo: The zoo houses over 2,400 animals of 235 species.\n",
+      "7. The University of Michigan in Ann Arbor: Known for its beautiful campus, top-ranking academic programs, and vibrant city life.\n",
       "\n",
-      "8. Belle Isle Park: It is a 982-acre island park in the Detroit River with a zoo, conservatory, and maritime museum.\n",
+      "8. Isle Royale National Park: A remote island in Lake Superior that offers wilderness, wildlife, and outdoor adventure.\n",
       "\n",
-      "9. The University of Michigan: Located in Ann Arbor, it's known for its research output, its comprehensive graduate program, and its athletic teams.\n",
+      "9. The Detroit Zoo: Located in Royal Oak, it is home to over 2,400 animals of 235 species.\n",
       "\n",
-      "10. Michigan's Adventure: The largest amusement park in the state, featuring roller coasters, a water park, and various other attractions. \n",
+      "10. The Michigan Science Center: Located in Detroit, it offers interactive exhibits for children and adults alike, including a planetarium and a 4D theater.\n",
       "\n",
-      "These are just a few examples, Michigan is full of interesting and beautiful places to visit. [None]\n"
+      "Remember, each of these locations may have specific visiting hours and may need prior booking, so it's a good idea to check their respective websites before planning a visit. [None]\n"
      ]
     }
    ],
