- tidy up and bug fixes - start model evaluation

--- a/notebook/demo_basic.ipynb
+++ b/notebook/demo_basic.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Demo (Basic Function)\n",
+    "# Demo -- Basic Functionality\n",
     "\n",
     "Demonstrate the basic operation of Knowledge Q&A.\n",
     "\n",
@@ -33,20 +33,9 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import json"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [],
-   "source": [
-    "from cjw.knowledgeqa.indexer.Indexer import Indexer\n",
-    "from cjw.knowledgeqa.indexer.MarqoIndexer import MarqoIndexer\n",
-    "from cjw.knowledgeqa.bots.GptBot import GptBot"
+    "import json\n",
+    "\n",
+    "from cjw.knowledgeqa import indexers, bots"
    ],
    "metadata": {
     "collapsed": false
@@ -65,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "\n",
@@ -96,24 +85,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index exists: Index test_indexer exists\n"
-     ]
-    }
-   ],
+   "execution_count": 3,
+   "outputs": [],
    "source": [
-    "try:\n",
-    "    # Create the index if not yet created\n",
-    "    index = MarqoIndexer.new(MARQO_SERVER, TEST_INDEX_NAME)\n",
-    "except Indexer.IndexExistError as e:\n",
-    "    # The index exists, so we just open it.\n",
-    "    print(f\"Index exists: {e}\")\n",
-    "    index = MarqoIndexer(MARQO_SERVER, TEST_INDEX_NAME)"
+    "index = indexers.index(\"marqo\", new=True, serverUrl=MARQO_SERVER, indexName=TEST_INDEX_NAME)"
    ],
    "metadata": {
     "collapsed": false
@@ -121,13 +96,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-07 17:00:02,764 logger:'marqo' INFO     add_documents batch 0: took 22.685s for Marqo to process & index 20 docs. Roundtrip time: 22.726s.\n"
+      "2024-01-07 23:01:33,900 logger:'marqo' INFO     add_documents batch 0: took 24.729s for Marqo to process & index 20 docs. Roundtrip time: 24.756s.\n"
      ]
     },
     {
@@ -153,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def showResults(results: dict):\n",
@@ -176,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -211,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -258,11 +233,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "# Create a bot (using GPT-4) and give it the indexed knowledge above.  We make the bot pick the top 5 candidate articles from which to derive its answer.\n",
-    "bot = GptBot.of(\"gpt4\").withFacts(index, contentFields=[\"title\", \"text\"], top=5)"
+    "bot = bots.bot(\"gpt4\").withFacts(index, contentFields=[\"title\", \"text\"], top=5)"
    ],
    "metadata": {
     "collapsed": false
@@ -270,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stderr",
@@ -283,7 +258,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yes, one point of interest in Michigan is the M-137, a state trunkline highway that served as a spur route to the Interlochen Center for the Arts and Interlochen State Park. However, as of June 2020, the highway designation was decommissioned and the jurisdiction of the roadway was transferred from the Michigan Department of Transportation to the Grand Traverse County Road Commission. [7751000]\n"
+      "One point of interest in Michigan is the M-137, a state trunkline highway that served as a spur route to the Interlochen Center for the Arts and Interlochen State Park. The highway was first shown without a number label on maps in 1930 and labeled after an extension the next year. The highway's current routing was established in the 1950s. However, jurisdiction of the roadway was transferred from the Michigan Department of Transportation to the Grand Traverse County Road Commission in June 2020, and the highway designation was decommissioned in the process. [7751000]\n"
      ]
     }
    ],
@@ -310,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -342,13 +317,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Euler's identity is a mathematical equation that establishes a deep relationship between several fundamental mathematical constants. It is often considered a remarkable and beautiful equation because it combines five of the most important numbers in mathematics into a single simple equation: the numbers 0, 1, pi, e and the imaginary unit i. The identity is written as e^(i*pi) + 1 = 0. This equation is a special case of Euler's formula, which states that for any real number x, e^(ix) = cos(x) + i*sin(x). [None]\n"
+      "Euler's identity is a mathematical equation that combines several fundamental mathematical constants, namely: the number 0, the number 1, the number π (Pi, roughly equal to 3.14159), the number e (Euler's number, roughly equal to 2.71828), and the square root of -1 (denoted as i). The identity is written as e^(iπ) + 1 = 0. This equation is often admired for its beauty as it involves the five most important constants in mathematics. [None]\n"
      ]
     }
    ],
@@ -363,13 +338,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "One notable point of interest in Michigan is the Interlochen Center for the Arts and Interlochen State Park, which were served by the M-137 state trunkline highway. This highway ran north through the community of Interlochen until it was decommissioned in 2020 . [7751000]\n"
+      "Yes, one of the interesting places in Michigan is the M-137 highway which served as a spur route to the Interlochen Center for the Arts and Interlochen State Park. It was a state trunkline highway in Michigan that ran through the community of Interlochen to US Highway 31 in Grand Traverse County. However, the highway designation was decommissioned in 2020 and the signage was removed. [7751000]\n"
      ]
     }
    ],
@@ -395,35 +370,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yes, there are many points of interest in Michigan. Here are a few:\n",
+      "Yes, Michigan is a state rich with history, natural beauty, and a wide range of cultural institutions and activities. Here are some points of interest:\n",
       "\n",
-      "1. The Henry Ford Museum: This museum in Dearborn is dedicated to American innovation, particularly in the field of technology.\n",
-      "\n",
-      "2. Detroit Institute of Arts: Home to one of the best art collections in the United States, the DIA offers a diverse range of exhibitions and educational programs.\n",
-      "\n",
-      "3. Mackinac Island: Known for its historic sites, horse-drawn carriages, and fudge shops. The island is also home to Fort Mackinac, which was built by the British during the American Revolutionary War.\n",
-      "\n",
-      "4. Pictured Rocks National Lakeshore: Located on the Lake Superior shoreline, this area offers stunning natural beauty, including sand dunes, waterfalls, and colorful mineral-stained cliffs.\n",
-      "\n",
-      "5. Sleeping Bear Dunes National Lakeshore: This park features towering sand dunes, beautiful beaches, and clear blue water. The Sleeping Bear Dunes also offer excellent hiking and camping opportunities.\n",
-      "\n",
-      "6. Detroit's Motown Museum: This museum is located in the house where Berry Gordy Jr. founded Motown Records. It's a must-visit for music lovers.\n",
-      "\n",
-      "7. The University of Michigan in Ann Arbor: Known for its beautiful campus, top-ranking academic programs, and vibrant city life.\n",
-      "\n",
-      "8. Isle Royale National Park: A remote island in Lake Superior that offers wilderness, wildlife, and outdoor adventure.\n",
-      "\n",
-      "9. The Detroit Zoo: Located in Royal Oak, it is home to over 2,400 animals of 235 species.\n",
-      "\n",
-      "10. The Michigan Science Center: Located in Detroit, it offers interactive exhibits for children and adults alike, including a planetarium and a 4D theater.\n",
-      "\n",
-      "Remember, each of these locations may have specific visiting hours and may need prior booking, so it's a good idea to check their respective websites before planning a visit. [None]\n"
+      "1. Mackinac Island: Known for its famous fudge, historic Fort Mackinac, and the Grand Hotel.\n",
+      "2. Pictured Rocks National Lakeshore: Beautiful rock formations along Lake Superior.\n",
+      "3. The Henry Ford Museum: A large indoor and outdoor history museum complex in the Detroit suburb of Dearborn.\n",
+      "4. Detroit Institute of Arts: Known for its diverse collection and the Detroit Industry Murals painted by Diego Rivera.\n",
+      "5. Sleeping Bear Dunes National Lakeshore: A beautiful area along the northwest coast of the Lower Peninsula of Michigan.\n",
+      "6. Belle Isle Park: A beautiful island park in the Detroit River with a zoo, conservatory, and maritime museum.\n",
+      "7. The University of Michigan in Ann Arbor: One of the best public universities in the U.S. with a campus full of architectural beauty.\n",
+      "8. The Motown Museum in Detroit: The museum is located in the house where record company Motown founder Berry Gordy Jr. lived and recorded.\n",
+      "9. The Detroit Zoo: Located in Royal Oak, it's one of Michigan's most visited tourist attractions.\n",
+      "10. The Gerald R. Ford Presidential Museum in Grand Rapids: A museum dedicated to the life and work of former president Gerald Ford. [None]\n"
      ]
     }
    ],
