--- a/notebook/prototyping_gptbot.ipynb
+++ b/notebook/prototyping_gptbot.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "import os\n",
     "\n",
-    "from cjw.knowledgeqa.indexer.MarqoIndexer import MarqoIndexer\n",
+    "from cjw.knowledgeqa.indexers.MarqoIndexer import MarqoIndexer\n",
     "SERVER = 'http://localhost:8882'\n",
     "TEST_INDEX = \"test_indexer\""
    ],
